# c-reference-counting

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.rst  configure.ac  refcount.c  refcount.h
examples/: simple.c
include/refcount/: refcount.h
src/: Makefile.am  linked_list.c  linked_list.h  list.h  refcount.c  refcount.h  refcount.pc.in  refcount_internal.h  test.c
tests/: Makefile.am  test.c  test_all.c  test_linked_list.c  test_linked_list.h  test_refcount.c  test_refcount.h
